force-app/main/default/objects/Conference__c/Conference__c.object-meta.xml
<CustomObject>
    <description>Maintain all the conference data</description>
    <label>Conference</label>
    <nameField>
        <label>Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Conferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>