force-app/main/default/objects/Conference__c/fields/Conference_Description__c.field-meta.xml
<CustomField>
    <fullName>Conference_Description__c</fullName>
    <description>Add conference detail information.</description>
    <inlineHelpText>Enter Conference description</inlineHelpText>
    <label>Session Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>