force-app/main/default/objects/Conference__c/fields/Conference_Duration__c.field-meta.xml
<CustomField>
    <fullName>Conference_Duration__c</fullName>
    <inlineHelpText>Select Duration</inlineHelpText>
    <label>Session Duration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>30 Min</fullName>
            </value>
            <value>
                <fullName>1 to 2 hr</fullName>
            </value>
            <value>
                <fullName>2 to 3 hr</fullName>
            </value>
            <value>
                <fullName>45 Min</fullName>
            </value>
            <value>
                <fullName>60 Min</fullName>
            </value>
            <value>
                <fullName>90 Min</fullName>
            </value>
            <value>
                <fullName>120 Min</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>