force-app/main/default/objects/Conference__c/fields/Conference_Journals__c.field-meta.xml
<CustomField>
    <fullName>Conference_Journals__c</fullName>
    <label>Conference Journals</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>