force-app/main/default/objects/Conference__c/fields/Conference_Room__c.field-meta.xml
<CustomField>
    <fullName>Conference_Room__c</fullName>
    <description>All conference location</description>
    <inlineHelpText>Enter conference location</inlineHelpText>
    <label>Session Room</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Auditorium</fullName>
                <default>true</default>
                <label>Auditorium</label>
            </value>
            <value>
                <fullName>Breakout room A</fullName>
            </value>
            <value>
                <fullName>Breakout room B</fullName>
            </value>
            <value>
                <fullName>Bоаrdrооm</fullName>
            </value>
            <value>
                <fullName>Keynote room</fullName>
            </value>
            <value>
                <fullName>Theater</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>