force-app/main/default/objects/Conference__c/fields/Conference_Time__c.field-meta.xml
<CustomField>
    <fullName>Conference_Time__c</fullName>
    <description>Add conference time</description>
    <inlineHelpText>Enter Session Date and Time</inlineHelpText>
    <label>Session Date/Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>