force-app/main/default/objects/Conference__c/fields/Conference_Topic__c.field-meta.xml
<CustomField>
    <fullName>Conference_Topic__c</fullName>
    <label>Conference Topic</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>